<resources>
    <string name="app_name">Altay Dilleri Sözlüğü</string>
    <string name="txt_create_account"><u>Регистрация</u></string>
    <string name="txt_login_account"><u>Войти</u></string>
    <string name="pwdUserNameWrong">Неправльно ввелен имя пользователя или пароль</string>
    <string name="txt_username">Имя пользователя</string>
    <string name="txt_password">Пароль</string>
    <string name="txt_signin">Войти</string>
    <string name="txt_forgot_password">Забыли пароль?</string>
    <string name="txt_not_account">Нету аккаунта?</string>
    <string name="txt_email">Email</string>
    <string name="txt_create">Регистрация</string>
    <string name="txt_yes_account">Есть аккаунт?</string>
    <string name="continue_without_an_account">Продолжить без регистрации</string>
    <string name="txt_signout">Выход</string>
    <string name="txt_signout_confirm">Вы уверены?</string>
    <string name="txt_cancel">Отмена</string>
    <string name="txt_search">Поиск</string>
    <string name="txt_animals">Животные</string>
    <string name="configuration">Поздравляем!</string>
    <string name="txt_pay_success">Успешно оплачено!</string>
    <string name="txt_preview_pay">Подробнее</string>
    <string name="txt_continue">Продолжить</string>
    <string name="something_went_wrong">Произошла ошибка!</string>
    <string name="txt_try_again">Повторить</string>
    <string name="txt_select_language">Выберите язык</string>
    <string name="txt_write_username">Введите имя пользователя</string>
    <string name="txt_write_password">Введите пароль</string>
    <string name="txt_write_email">Введите почту</string>
    <string name="txt_create_success_account">Ваш аккаунт успешно создано!</string>
    <string name="txt_or_log_in_with">Другие варианты для входа</string>
    <string name="txt_confirm_password">Повторите пароль</string>
    <string name="txt_error_request">Произошла ошибка! Повторите заново!</string>
    <string name="txt_success_logout">Вы успешно вышли</string>
    <string name="txt_profile">Профиль</string>
    <string name="txt_access_account">Чтобы иметь полный доступ, пожалуйста, зарегистрируйтесь</string>
    <string name="txt_register">Регистрация</string>
    <string name="txt_basic_member">Обычный пользователь</string>
    <string name="txt_get_premium">Переход на премиум</string>
    <string name="txt_enable_geo">Пожалуйста включите геолокацию</string>
    <string name="txt_error_add_favorite">Произошла ошибка при добавлении слова!</string>
    <string name="txt_success_add_favorite">Слово успешшно добавлено!</string>
    <string name="txt_edit">Изменить</string>
    <string name="basic_language">Основной язык</string>
    <string name="full_name">Полное имя</string>
    <string name="txt_email_edit">Электронная почта</string>
    <string name="txt_select_plan">Выберите план</string>
    <string name="txt_month_plan">Месячный план</string>
    <string name="txt_all_words">Доступ ко всем словам</string>
    <string name="txt_year_plan">Годовой план</string>
    <string name="txt_phrases">Доступ ко всем фразам</string>
    <string name="txt_payment_method">Способ оплаты</string>
    <string name="txt_payyment_price">Цена оплаты</string>
    <string name="txt_accepted">принимаетя</string>

    <string name="facebook_app_id">690235429041312</string>
    <string name="fb_login_protocol_scheme">fb690235429041312</string>

</resources>