<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    tools:context=".ui.login.LoginActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:src="@drawable/flag"/>

        <EditText
            android:id="@+id/edit_username"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_alternates"
            android:textStyle="bold"
            android:hint="@string/txt_username"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:textColorHint="@color/white" />

        <TextView
            android:id="@+id/usernameError"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="end"
            android:layout_marginStart="32dp"
            android:background="@drawable/bg_button"
            android:text="@string/pwdUserNameWrong"
            android:textColor="@color/color_txt_error"
            android:layout_marginEnd="80dp"
            android:textSize="10sp"
            android:paddingTop="2dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:visibility="gone"
            tools:ignore="SmallSp" />



        <EditText
            android:id="@+id/edit_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_alternates"
            android:textStyle="bold"
            android:hint="@string/txt_password"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:drawableEnd="@drawable/ic_visible_psw"
            android:inputType="textPassword"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/white" />

        <TextView
            android:id="@+id/passwordError"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="32dp"
            android:background="@drawable/bg_button"
            android:text="@string/pwdUserNameWrong"
            android:textColor="@color/color_txt_error"
            android:layout_marginEnd="80dp"
            android:textSize="10sp"
            android:paddingTop="2dp"
            android:layout_gravity="end"
            android:visibility="gone"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:background="@drawable/bg_login_btn"
            android:text="@string/txt_signin"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:fontFamily="@font/montserrat_alternates"
            android:textColor="@color/main_bg" />

        <TextView
            android:id="@+id/txt_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_forgot_password"
            android:textStyle="normal"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_alternates"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_or_log_in_with"
            android:textStyle="normal"
            android:textSize="18sp"
            android:layout_marginTop="25dp"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_alternates"
            android:layout_gravity="center_horizontal"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="@color/white">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_facebook"/>



            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="@color/white"
                android:layout_marginStart="25dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_google" />

                </RelativeLayout>





            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp">


            <TextView
                android:id="@+id/txt_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_not_account"
                android:textStyle="normal"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat_alternates"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/txt_create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_create_account"
                android:textStyle="bold"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat_alternates"
                android:textColor="@color/white"
                android:layout_marginStart="5dp"
                />

        </LinearLayout>
    </LinearLayout>



    <RelativeLayout
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#52FFFFFF"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</RelativeLayout>