<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".ui.payment.PaymentResultFragment">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_back_blue"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="380dp"
            android:backgroundTint="@color/white"
            app:cardElevation="4dp"
            app:cardCornerRadius="15dp"
            android:layout_centerInParent="true"
            android:visibility="gone"
            tools:targetApi="lollipop">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_success"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_success"
                    android:layout_marginTop="40dp"
                    android:layout_gravity="center_horizontal"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/configuration"
                    android:textColor="@color/main_bg"
                    android:textStyle="bold"
                    android:fontFamily="@font/philosopher"
                    android:textSize="18sp"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_pay_success"
                    android:textColor="@color/main_bg"
                    android:textStyle="normal"
                    android:fontFamily="@font/philosopher"
                    android:textSize="16sp"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal"/>

                <Button
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/main_bg"
                    app:cornerRadius="10dp"
                    android:text="@string/txt_preview_pay"
                    android:textSize="18sp"
                    android:textAllCaps="false"
                    android:fontFamily="@font/montserrat_alternates"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    tools:targetApi="lollipop" />

                <Button
                    android:layout_width="195dp"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/main_bg"
                    app:cornerRadius="10dp"
                    android:text="@string/txt_continue"
                    android:textSize="18sp"
                    android:textAllCaps="false"
                    android:fontFamily="@font/montserrat_alternates"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    tools:targetApi="lollipop" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="380dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="15dp"
        app:cardElevation="4dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:targetApi="lollipop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_failure"
                android:layout_marginTop="40dp"
                android:layout_gravity="center_horizontal"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/something_went_wrong"
                android:textColor="@color/main_bg"
                android:textStyle="bold"
                android:fontFamily="@font/philosopher"
                android:textSize="18sp"
                android:layout_marginTop="35dp"
                android:layout_gravity="center_horizontal"/>


            <Button
                android:layout_width="195dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/main_bg"
                app:cornerRadius="10dp"
                android:text="@string/txt_try_again"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:fontFamily="@font/montserrat_alternates"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                tools:targetApi="lollipop" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>