<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".ui.profile.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_alignParentTop="true"
        android:background="@color/main_bg">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/main_icon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/flag" />

            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="280dp"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/main_icon"
                android:paddingStart="25dp"
                app:titleTextColor="@color/white"
                app:title="@string/app_name"
                app:titleTextAppearance="@style/ToolbarTheme"/>

            <ImageView
                android:id="@+id/btn_logout"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_toEndOf="@id/toolbar"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:src="@drawable/ic_logout"/>

            <EditText
                android:id="@+id/edit_search"
                android:layout_width="270dp"
                android:layout_height="35dp"
                android:layout_toRightOf="@id/main_icon"
                android:hint="Издөө"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginStart="30dp"
                android:layout_centerVertical="true"
                android:drawableEnd="@drawable/ic_cancel"
                android:fontFamily="@font/montserrat_alternates"
                android:background="@drawable/bg_edit_text"
                android:textColorHint="@color/txt_color"
                android:visibility="gone"
                android:textColor="@color/black"/>


        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_profile"
        android:textColor="@color/main_bg"
        android:layout_below="@id/appBar"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/philosopher"
        android:textSize="18dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="260dp"
        android:layout_height="260dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="214dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_access_account"
                android:textColor="@color/main_bg"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/philosopher"
                android:textSize="18dp"/>

            <Button
                android:layout_width="215dp"
                android:layout_height="55dp"
                android:backgroundTint="@color/main_bg"
                app:cornerRadius="5dp"
                android:text="@string/txt_register"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:fontFamily="@font/montserrat_alternates"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                tools:targetApi="lollipop" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>